--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Web Studio</title>
 </head>
 <body>
-    <header>
-        <a href="#">
-            <img src="images/header/logo.jpg" alt="logo" width="145" height="31"></a>   
+<header>
+        <a href="images/header/logo.jpg">WebStudio</a>
             <nav>
                 <ul>
                     <li><a href="#">Agencja</a></li>
@@ -18,12 +17,94 @@
                 </ul>
             </nav>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+48111111111">+48 111 111 111</a>
-        </header>
+            <a href="tel:+48111111111">+48 111 111 111</a>  
+</header>
+<!--hero-->
     <main>
+    <section>
+        <div>
+        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button type="button">Zamów usługe</button>
+         </div>
+    </section>
+<!--Atuty-->
+<section>
+    <div>
+        <ul>
+            <li>
+                <h2>LOREM IPSUM</h2>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            </li>
+            <li>
+                <h2>LOREM IPSUM</h2>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            </li>
+            <li>
+                <h2>LOREM IPSUM</h2>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            </li>
+            <li>
+                <h2>LOREM IPSUM</h2>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            </li>
+        </ul>
+    </div>
+</section>
+<!--Gallery-->
+<section>
+<div>
+    <h2>Czym się zajmujemy</h2>
+    <ul>
+        <li><img src="/images/about/img.jpg" alt="pisanie na klawiaturze" width="370" height="294"></li>
+        <li><img src="/images/about/img1.jpg" alt="ustawianie aplikacji na telefonie" width="370" height="294"></li>
+        <li><img src="/images/about/img2.jpg" alt="dbieranie kolorów z palety" width="370" height="294"></li>
+    </ul>
+</div>
+</section>
+<!--Team-->
+<section>
+
+    <div>
+        <h2>Nasz zespół</h2>
+        <ul>
+            <li>
+                <img src="/images/team/pracownik1.jpg" alt="pracownik1" width="270" height="260">
+                    <h3>John Doe</h3>
+                    <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="/images/team/pracownik2.jpg" alt="pracownik2" width="270" height="260">
+                    <h3>John Doe</h3>
+                    <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="/images/team/pracownik3.jpg" alt="pracownik3" width="270" height="260">
+                    <h3>John Doe</h3>
+                    <p>Marketing</p>
+            </li>
+            <li>
+                <img src="/images/team/pracownik4.jpg" alt="pracownik4" width="270" height="260">
+                    <h3>John Doe</h3>
+                    <p>UI Designer</p>
+            </li>
+        </ul>
+    </div>
+
+</section>
     </main>
     <footer>
-        
+        <a href="images/header/logo.jpg">WebStudio</a>
+        <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/dJ92y6GsQ9tfoDRQ7" target="_blank"></a>m. Warszawa, Aleje Jerozolimskie 21</li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+            </ul>
+        </address>
     </footer>
 </body>
 </html>
