--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-        <a href="images/header/logo.jpg">WebStudio</a>
+        <a href="#"><span>Web</span>Studio</a>
             <nav>
                 <ul>
                     <li><a href="#">Agencja</a></li>
@@ -59,7 +59,7 @@
 <div>
     <h2>Czym się zajmujemy</h2>
     <ul>
-        <li><img src="/images/about/img.jpg" alt="pisanie na klawiaturze" width="370" height="294"></li>
+        <li><img src="C:\Users\Aktywacja_1\Desktop\GOIT\goit-markup-hw-01\images\about" alt="pisanie na klawiaturze" width="370" height="294"></li>
         <li><img src="/images/about/img1.jpg" alt="ustawianie aplikacji na telefonie" width="370" height="294"></li>
         <li><img src="/images/about/img2.jpg" alt="dbieranie kolorów z palety" width="370" height="294"></li>
     </ul>
