--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 <div>
     <h2>Czym się zajmujemy</h2>
     <ul>
-        <li><img src="C:\Users\Aktywacja_1\Desktop\GOIT\goit-markup-hw-01\images\about" alt="pisanie na klawiaturze" width="370" height="294"></li>
-        <li><img src="/images/about/img1.jpg" alt="ustawianie aplikacji na telefonie" width="370" height="294"></li>
-        <li><img src="/images/about/img2.jpg" alt="dbieranie kolorów z palety" width="370" height="294"></li>
+        <li><img src="./images/about/img.jpg" alt="pisanie na klawiaturze" width="370" height="294"></li>
+        <li><img src="./images/about/img1.jpg" alt="ustawianie aplikacji na telefonie" width="370" height="294"></li>
+        <li><img src="./images/about/img2.jpg" alt="dbieranie kolorów z palety" width="370" height="294"></li>
     </ul>
 </div>
 </section>
@@ -95,9 +95,10 @@
     </div>
 
 </section>
+
     </main>
     <footer>
-        <a href="images/header/logo.jpg">WebStudio</a>
+        <a href="#"><span>Web</span>Studio</a>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/dJ92y6GsQ9tfoDRQ7" target="_blank"></a>m. Warszawa, Aleje Jerozolimskie 21</li>
