--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio</title>
+    <title>Studio</title>
 </head>
 <body>
 <header>
@@ -72,22 +72,22 @@
         <h2>Nasz zespół</h2>
         <ul>
             <li>
-                <img src="/images/team/pracownik1.jpg" alt="pracownik1" width="270" height="260">
+                <img src="./images/team/pracownik1.jpg" alt="pracownik1" width="270" height="260">
                     <h3>John Doe</h3>
                     <p>Product Designer</p>
             </li>
             <li>
-                <img src="/images/team/pracownik2.jpg" alt="pracownik2" width="270" height="260">
+                <img src="./images/team/pracownik2.jpg" alt="pracownik2" width="270" height="260">
                     <h3>John Doe</h3>
                     <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="/images/team/pracownik3.jpg" alt="pracownik3" width="270" height="260">
+                <img src="./images/team/pracownik3.jpg" alt="pracownik3" width="270" height="260">
                     <h3>John Doe</h3>
                     <p>Marketing</p>
             </li>
             <li>
-                <img src="/images/team/pracownik4.jpg" alt="pracownik4" width="270" height="260">
+                <img src="./images/team/pracownik4.jpg" alt="pracownik4" width="270" height="260">
                     <h3>John Doe</h3>
                     <p>UI Designer</p>
             </li>
